--- a/package.json
+++ b/package.json
@@ -1,41 +1,22 @@
 {
-  "_from": "ionic3-calendar",
-  "_id": "ionic3-calendar@1.1.6",
-  "_inBundle": false,
-  "_integrity": "sha1-grou/7WGGQA9gep57GPSVWD8Y+w=",
-  "_location": "/ionic3-calendar",
-  "_phantomChildren": {
-    "@angular/tsc-wrapped": "4.1.3",
-    "minimist": "1.2.0",
-    "reflect-metadata": "0.1.10",
-    "symbol-observable": "1.1.0"
+  "name": "ionic3-calendar",
+  "version": "1.0.0",
+  "description": "An event calendar component for the Ionic hybrid mobile development platform",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "_requested": {
-    "type": "tag",
-    "registry": true,
-    "raw": "ionic3-calendar",
-    "name": "ionic3-calendar",
-    "escapedName": "ionic3-calendar",
-    "rawSpec": "",
-    "saveSpec": null,
-    "fetchSpec": "latest"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rajkhan91/ionic3-calendar.git"
   },
-  "_requiredBy": [
-    "#USER",
-    "/"
-  ],
-  "_resolved": "https://registry.npmjs.org/ionic3-calendar/-/ionic3-calendar-1.1.6.tgz",
-  "_shasum": "82ba2effb58619003d81ea79ec63d25560fc63ec",
-  "_spec": "ionic3-calendar",
-  "_where": "C:\\HybripApp\\utravy",
-  "author": {
-    "name": "laker007"
-  },
+  "author": "gbrits_0",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/rajkhan91/ionic3-calendar/issues"
   },
-  "bundleDependencies": false,
-  "dependencies": {
+  "homepage": "https://github.com/rajkhan91/ionic3-calendar/#readme",
+  "peerDependencies": {
     "@angular/common": "4.1.3",
     "@angular/compiler": "4.1.3",
     "@angular/compiler-cli": "4.1.3",
@@ -45,26 +26,12 @@
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
     "ionic-angular": "3.5.0",
-    "lodash": "^4.17.4",
-    "moment": "^2.18.1",
     "rxjs": "5.4.0",
-    "zone.js": "0.8.12"
+    "zone.js": "0.8.12",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1"
   },
-  "deprecated": false,
-  "description": "Calendar Component For Ionic",
   "devDependencies": {
     "typescript": "2.3.4"
-  },
-  "homepage": "https://github.com/rajkhan91/ionic3-calendar#readme",
-  "license": "ISC",
-  "main": "index.js",
-  "name": "ionic3-calendar",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rajkhan91/ionic3-calendar.git"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "version": "1.1.6"
+  }
 }
